--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,460 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+* {
+    scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.portfolio-main{
+    padding: 20px;
+    padding-bottom: 40px;
+    padding-bottom: 100px;
+    background-color: #eeeeee;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.portfolio-main-dark{
+    padding: 20px;
+    padding-bottom: 100px;
+    background-color: #424242;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.name-header{
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
 }
 
-.App-link {
-  color: #61dafb;
+
+.name-header-dark{
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+    color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.header-main{
+    margin: 30px;
+}
+
+.intro-card{
+    width: 100%;
+    background-color: white;
+    box-shadow: 1px 1px 2px 2px grey;
+    border-radius: 5px;
+}
+
+.intro-card-dark{
+    width: 100%;
+    background-color: #212121;
+    box-shadow: 1px 1px 2px 2px #212121;
+    border-radius: 5px;
+}
+
+.card-wrapper{
+    background-color: #eaeaea;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    border-radius: 5px;
+    border-bottom: 1px solid grey;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.card-wrapper-dark{
+    background-color: #424242;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    border-radius: 5px;
+    border-bottom: 1px solid #212121;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.three-dots{
+    display: flex;
+}
+
+.dot-1{
+    background-color: tomato;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    margin-top: 15px;
+    margin-left: 10px;
+    box-shadow: 1px 1px 1px 1px grey;
+}
+
+.dot-2{
+    background-color: #ffc107;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    margin-top: 15px;
+    margin-left: 10px;
+    box-shadow: 1px 1px 1px 1px grey;
+}
+
+.dot-3{
+    background-color: #4caf50;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    margin-top: 15px;
+    margin-left: 10px;
+    box-shadow: 1px 1px 1px 1px grey;
+}
+
+.email-wrapper{
+    margin: 15px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.email-wrapper-dark{
+    margin: 15px;
+    font-family: 'Roboto Mono', monospace;
+    color: whitesmoke;
+    height: 40vh;
+}
+
+
+.main-section{
+    display: flex;
+    justify-content: space-between;
+    height: 40vh;
+}
+
+.main-section-dark{
+    display: flex;
+    justify-content: space-between;
+    background-color: #212121;
+    height: 40vh;
+}
+.image-wrapper{
+    position: relative;
+    top: 60px;
+    left: 100px;
+}
+
+.user-image{
+    width: 150px;
+}
+
+.whoamI-wrapper{
+    background-color: #f0ead6;
+    width: 300px;
+    height: 150px;
+    position: relative;
+    top: 70px;
+    right: 150px;
+}
+
+
+.whoamI-wrapper-dark{
+    background-color: #111921;
+    width: 300px;
+    height: 150px;
+    position: relative;
+    top: 70px;
+    right: 150px;
+}
+
+.blue-card{
+    height: 150px;
+    width: 300px;
+    border: 1px solid #2196f3;
+    position: relative;
+    top: 30px;
+    left: 30px;
+    background-color: rgb(251, 249, 243, 0.8);
+    font-family: 'Roboto Mono', monospace;
+}
+
+.blue-card-dark{
+    height: 150px;
+    width: 300px;
+    border: 1px solid #2196f3;
+    position: relative;
+    top: 30px;
+    left: 30px;
+    background-color: black;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.small-dot-1{
+    border: 0.5px solid #2196f3;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: white;
+    position: relative;
+    top: 45px;
+    left: 25px;
+    z-index: 9;
+}
+
+.small-dot-2{
+    border: 0.5px solid #2196f3;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: white;
+    position: relative;
+    float: right;
+    top: 35px;
+    left: 35px;
+    z-index: 9;
+}
+
+.small-dot-3{
+    border: 0.5px solid #2196f3;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: white;
+    position: relative;
+    top: 185px;
+    left: 25px;
+    z-index: 9;
+}
+
+.small-dot-4{
+    border: 0.5px solid #2196f3;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: white;
+    position: relative;
+    float: right;
+    top: 175px;
+    left: 35px;
+    z-index: 9;
+}
+
+.blue-card-content{
+    padding: 30px;
+    margin-top: -10px;
+}
+
+.skills-card-main{
+    background-color: white;
+    border: 0.5px solid grey;
+    margin-top: 40px;
+    height: 80vh;
+    display: flex;
+    justify-content: space-between;
+}
+
+.skills-card-main-dark{
+    background-color: #212121;
+    border: 0.5px solid #212121;
+    margin-top: 40px;
+    height: 80vh;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.skills-section{
+    padding-top: 50px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 50%;
+}
+
+.skills-section-dark{
+    padding-top: 50px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 50%;
+    color: whitesmoke;
+}
+
+.more-about-me{
+    font-size: 24px;
+    font-family: 'Recursive', sans-serif;
+}
+
+.skill-text{
+    font-family: 'Roboto Mono', monospace;
+    font-size: 16px;
+    font-weight: 500;
+    color: #4b5156;
+}
+
+.skill-text-dark{
+    font-family: 'Roboto Mono', monospace;
+    font-size: 16px;
+    font-weight: 500;
+    color: whitesmoke;
+}
+
+
+.expertise{
+    text-transform: uppercase;
+    font-size: 24px;
+    font-family: 'Recursive', sans-serif;
+}
+
+.expertise-body{
+    font-size: 16px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.skills-container{
+    background-color: #f0ead6;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    padding-right: 25px;
+}
+
+.skills-container-dark{
+    background-color: #111921;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    padding-right: 25px;
+}
+
+.skill-list{
+    list-style: none;
+}
+
+.skill-list li {
+    font-family: 'Roboto Mono', monospace;
+}
+
+.links-section{
+    width: 50%;
+    position: relative;
+    top: 50px;
+}
+
+.my-picture{
+    width: 100%;
+    padding-right: 20px;
+    height: 40vh;
+}
+
+.button-links{
+    padding-right: 20px;
+    margin-top: 20px;
+}
+
+.github-button{
+    background-color: #4caf50 !important;
+    color: whitesmoke !important;
+    margin-top: 10px !important;
+}
+
+.github-button:hover{
+    background-color: #43a047 !important;
+    color: whitesmoke !important;
+}
+
+.project-container{
+    margin-top: 20px;
+}
+
+.project-header{
+    font-family: 'Roboto Mono', monospace;
+}
+
+.project-header-dark{
+    font-family: 'Roboto Mono', monospace;
+    color: whitesmoke;
+}
+
+.project-card{
+    width: 350px !important;
+    height: 450px !important;
+}
+
+.card-header{
+    text-align: left;
+    font-size: 20px !important;
+}
+
+.card-description{
+    text-align: left;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.button-container{
+    display: flex;
+    margin-top: 10px;
+}
+
+.links-button{
+    font-family: 'Lato', sans-serif;
+}
+
+.project-image{
+    height: 150px;
+    object-fit: cover;
+}
+
+.card-content{
+    position: relative;
+    top: 100px;
+}
+
+.floating-button{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.light-theme{
+    width: 35px;
+    height: 35px;
+    background-color: white;
+    border-radius: 50%;
+    border: 3px solid #212121;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.dark-theme{
+    width: 35px;
+    height: 35px;
+    background-color: #212121;
+    border-radius: 50%;
+    border: 3px solid white;
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+
+.theme-buttons{
+    display: flex;
+    justify-content: center;
+}
+
+.theme-header{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.theme-header-dark{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    color: whitesmoke;
+}
+
+.blue-card-header-dark{
+    color: whitesmoke;
+}
+
+.blue-card-desc-dark {
+    color: whitesmoke;
 }
